--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">Pokedex</string>
     <string name="title_activity_main">Pokedex</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="package_name">nl.daanvanberkel.pokedex</string>
+    <string name="custom_url_scheme">nl.daanvanberkel.pokedex</string>
 </resources>
